samples/_failures_safe/1761257201_1d9914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb2c8934.c: In function ‘tokenize’:
./samples/SAFE/__tmp_bb2c8934.c:170:15: error: expected ‘;’ at end of input
  170 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_bb2c8934.c:170:9: error: expected declaration or statement at end of input
  170 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_bb2c8934.c:170:9: error: expected declaration or statement at end of input
